fixed broken css AGAIN

--- a/ibeer_starter_files/main.css
+++ b/ibeer_starter_files/main.css
@@ -132,7 +132,6 @@ aside{
     flex: 1;
     position: relative;
     margin-right: 3em;
-    flex-basis: auto;
 
     /*
         TODO:
